# proyect1

./: .gitignore  AnalysisContext.tsx  App.tsx  AuthContext.tsx  BottomNavigationBar.tsx  Button.tsx  CICD_ARCHITECTURE.md  CICD_IMPLEMENTATION_SUMMARY.md  COMPLETION_SUMMARY.md  ChromaticQuizPage.tsx  DOCKER_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  FLASK_TO_FASTAPI_MIGRATION_VERIFICATION.md  FaceAnalysisPage.tsx  FaceAnalysisResultsPage.tsx  HomePage.tsx  Input.tsx  LoadingSpinner.tsx  MIGRATION_GUIDE.md  MVP_SYNTHIA_STYLE_FINAL_REPORT.md  Makefile  OutfitGeneratorPage.tsx  PERFORMANCE_COMPARISON_FLASK_VS_FASTAPI.md  PageHeader.tsx  ProfilePage.tsx  QUICK_START.md  README.md  README_old.md  SHOPPING_SYSTEM_GUIDE.md  SHOPPING_SYSTEM_IMPLEMENTATION_SUMMARY.md  STEP1_BACKEND_MIGRATION_COMPLETION.md  STEP1_FASTAPI_MIGRATION_COMPLETION_REPORT.md  STEP1_MIGRATION_COMPLETION_VERIFICATION.md  STEP5_CICD_IMPLEMENTATION_SUMMARY.md  SeasonResultsPage.tsx  SignInPage.tsx  SignUpPage.tsx  StyleConsultationIntroPage.tsx  (+89 more)
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py  security.py
backend/app/analysis/: __init__.py  router.py  routes.py  schemas.py  services.py
backend/app/auth/: __init__.py  router.py  routes.py  schemas.py  security.py  services.py
backend/app/outfits/: __init__.py  routes.py  services.py
backend/app/services/: __init__.py  gemini_service.py
backend/app/wardrobe/: __init__.py  routes.py
backend/prisma/: schema.prisma
frontend/: package-lock.json  package.json  tailwind.config.js
(+22 files in other folders)
